--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
       padding: 1rem;
       text-align: center;
     }
-    header img {
-      height: 60px;
-    }
     .banner {
       width: 100%;
       display: block;
@@ -104,7 +101,7 @@
 </head>
 <body>
   <header>
-    <img src="https://github.com/Per-Arredondo/ejercicio_clinica-v1/blob/main/pediatria.png?raw=true" alt="Logo Clínica">
+    <h1>Clínica Gineco-Pediátrica</h1>
   </header>
 
   <img src="https://github.com/Per-Arredondo/ejercicio_clinica-v1/blob/main/portada.png?raw=true" alt="Portada Clínica" class="banner">
@@ -190,23 +187,17 @@
       });
     }
 
-    // Envío a Google Sheets via App Script WebApp URL
+    // Envío simplificado con FormData
     const form = document.getElementById("appointment-form");
     form.addEventListener("submit", function(e) {
       e.preventDefault();
 
       const data = new FormData(form);
-      const object = {};
-      data.forEach((value, key) => object[key] = value);
 
       fetch('https://script.google.com/macros/s/AKfycbwQ5rl6810cU_gNj4pCnf4MIeX4i3I6MtL8vCpRcRkoWGKu656mLRn9nbpMXpM39Yeb/exec', {
         method: 'POST',
-        body: JSON.stringify(object),
-        headers: {
-          'Content-Type': 'application/json'
-        }
+        body: data
       })
-      .then(res => res.json())
       .then(() => {
         const msg = document.getElementById("success-message");
         msg.style.display = "block";
@@ -216,7 +207,10 @@
           msg.style.display = "none";
         }, 5000);
       })
-      .catch(err => alert("Error al enviar el formulario. Intenta de nuevo."));
+      .catch(err => {
+        console.error("Error:", err);
+        alert("Error al enviar el formulario. Intenta de nuevo.");
+      });
     });
   </script>
 </body>
